fixed radio shift down

--- a/intro/css/custom.css
+++ b/intro/css/custom.css
@@ -93,13 +93,26 @@
     background-color: #b03333;
   }
   
-  .custom-radio input[type=radio]:checked + label:after {
+  .custom-radio .blue input[type=radio]:checked + label:after {
     border-radius: 10px;
     width: 10px;
     height: 10px;
-    position: relative;
-    right: -1.1rem;
-    top: -0.93rem;
+
+    position: absolute;
+    right: 7.8rem;
+    top: 0.7rem;
+    content: " ";
+    display: block;
+    background:white;
+  }
+
+  .custom-radio .red input[type=radio]:checked + label:after {
+    border-radius: 10px;
+    width: 10px;
+    height: 10px;
+    position: absolute;
+    right: 3.4rem;
+    top: 0.7rem;
     content: " ";
     display: block;
     background:white;
